--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
   <title>TownTalk Admin Panel</title>
 
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <script type="module" src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -40,7 +40,7 @@
   </div>
 </div>
 
-<script src="scripts/firebase-config.js"></script>
+<script src="firebase-config.js"></script>
 <script src="scripts/admin.js"></script>
 </body>
 </html>
