--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <main id="feed"></main>
 
-<script src="scripts/firebase-config.js"></script>
+<script src="firebase-config.js"></script>
 <script src="scripts/feed.js"></script>
 
 </body>
