--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
   <title>TownTalk Admin Panel</title>
 
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script type="module" src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
   <link rel="stylesheet" href="styles.css">
 </head>
