--- a/admin.html
+++ b/admin.html
@@ -18,6 +18,12 @@
   <div class="drawer">
     <h2>Admin Controls</h2>
 
+  <div class="admin-buttons">
+    <button id="start-btn">Start</button>
+    <button id="pause-btn">Pause</button>
+    <button id="stop-btn">Stop</button>
+  </div>
+
     <label>Posting Interval (ms)</label>
     <input type="number" id="interval-input">
 
