--- a/admin.html
+++ b/admin.html
@@ -38,7 +38,7 @@
     </select>
 
     <label>Messages</label>
-    <small style="display: block; color: #71767b; margin-bottom: 0.5rem; font-size: 0.8125rem;">
+    <small style="display: block; color: #5a3f2f; margin-bottom: 0.5rem; font-size: 0.8125rem; opacity: 0.8;">
       Format: emoji|username|handle|message<br>
       Example: 👤|JohnDoe|@johndoe|Hello world!<br>
       Or just: Your message here (will auto-generate username/handle)
